* Replaced usages of [5] with [QT_STD_BORDER] * Supply a simple 'mkpkg' script to create packages with checkinstall. * [Gtk2] Fix compilation when cmake is called with           -DQTC_MODIFY_MOZILLA=true * [Gtk2] Dont free() the values returned from gtk_widget_style_get()

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.54.1
+------
+1. Supply a simple 'mkpkg' script to create packages with checkinstall.
+
 0.54
 ----
 1. Converted buildsystem to CMake.
