--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.55.2
+------
+1. Add ability to import qtc_*.themerc settings into config dialog.
+
 0.55.1
 ------
 1. Only allow coloured selected tabs if tab appearance is set to gradient.
