Style "Ideal::Button"s on "Ideal::ButtonBar"s as per KMultiTabBar tabs. (Makes KTorrent's tab buttons look like Kate's sidebar buttons)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+0.55.3
+------
+1. Style "Ideal::Button"s on "Ideal::ButtonBar"s as per KMultiTabBar tabs.
+   (Makes KTorrent's tab buttons look like Kate's sidebar buttons)
+
 0.55.2
 ------
 1. Add ability to import qtc_*.themerc settings into config dialog.
