Read KDE4's contrast setting if running under KDE4.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Style "Ideal::Button"s on "Ideal::ButtonBar"s as per KMultiTabBar tabs.
    (Makes KTorrent's tab buttons look like Kate's sidebar buttons)
+2. Read KDE4's contrast setting if running under KDE4.
 
 0.55.2
 ------
