--- a/ChangeLog
+++ b/ChangeLog
@@ -11,7 +11,8 @@
 5. Read in KWin's pallete, and use to colour MDI windows.
 6. Draw own icons for titlebar buttons - more KDE4 like.
 7. Option to tint the default button colour.
-8. Only mark default button if it is enabled.
+8. Option to draw a stripe on the left hand side of popupmenus.
+9. Only mark default button if it is enabled.
 
 0.55.3
 ------
