Modify defaults:    Turn off shade menubar only of active window    Set default button indicator to tint

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.57
+----
+1. Modify defaults:
+     Turn off shade menubar only of active window
+     Set default button indicator to tint
+
 0.56.3
 ------
 1. Don't set sliders to flat just because appearance is flat.
