--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Fix for frameless groupboxes krusader's config dialog.
 2. Draw QDockWindowResize handles like QSplitters.
+3. Make dock windows more KDE4 like.
 
 0.57
 ----
