--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Fix for frameless groupboxes krusader's config dialog.
 2. Draw QDockWindowResize handles like QSplitters.
 3. Make dock windows more KDE4 like.
+4. Don't draw frames around kicker buttons.
 
 0.57
 ----
