--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 ----
 1. Add a config option for menu stripe appearance - defaults to gradient.
 2. Add a config option for selection appearance - defaults to flat. KDE4 (Qt4.4) & Gtk2 only.
+3. Use background colour for disabled scrollbar buttons.
+4. Remove some frames from systemsettings.
 
 0.57.1
 ------
