--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 4. Remove some frames from systemsettings.
 5. Don't draw menu separators through stripe.
 6. Draw menu stripe on the right for RTL languages.
+7. Supply a QtCurve colors file.
+8. Lighter menustripe when not lightening menus.
+9. Lighter menu separators.
 
 0.57.1
 ------
