--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 0.58.1
 ------
 1. When drawing gray focus rect, draw only slightly rounded.
-2. When coloring menubars, correctly draw menubar text colour
+2. Etch/shadow effect now applied to widget sides as well as
+   top/bottom.
+3. When coloring menubars, correctly draw menubar text colour
    of inactive windows.
 
 0.58
