--- a/ChangeLog
+++ b/ChangeLog
@@ -5,8 +5,12 @@
    top/bottom.
 3. Add etching to checks, radios, slider grooves, and progressbars.
 4. Option to have progress fill groove - default to true.
-5. When coloring menubars, correctly draw menubar text colour
+5. Dont do coloured mouse over for mdi buttons, dock widget buttons,
+   or toolbar buttons.
+6. Better colored mouse over for checks and radios.
+7. When coloring menubars, correctly draw menubar text colour
    of inactive windows.
+8. Fix potential crash when using pixmap cache.
 
 0.58
 ----
