--- a/ChangeLog
+++ b/ChangeLog
@@ -1,18 +1,21 @@
 0.59
 ----
-1. When drawing gray focus rect, draw only slightly rounded.
-2. Etch/shadow effect now applied to widget sides as well as
-   top/bottom.
-3. Add etching to checks, radios, slider grooves, and progressbars.
-4. Option to have progress fill groove - default to true.
-5. Dont do coloured mouse over for mdi buttons, dock widget buttons,
-   or toolbar buttons.
-6. Better colored mouse over for checks and radios.
-7. Don't use background colour for non-coloured mouse over of
-   check/radios if highlighting text backgroud.
-8. When coloring menubars, correctly draw menubar text colour
-   of inactive windows.
-9. Fix potential crash when using pixmap cache.
+ 1. When drawing gray focus rect, draw only slightly rounded.
+ 2. Etch/shadow effect now applied to widget sides as well as
+    top/bottom.
+ 3. Add etching to checks, radios, slider grooves, and progressbars.
+ 4. Option to have progress fill groove - default to true.
+ 5. Option to display non-editable combo splitter - defaults to false.
+ 6. Dont do coloured mouse over for mdi buttons, dock widget buttons,
+    or toolbar buttons.
+ 7. Better colored mouse over for checks and radios.
+ 8. Don't use background colour for non-coloured mouse over of
+    check/radios if highlighting text backgroud.
+ 9. When coloring menubars, correctly draw menubar text colour
+    of inactive windows.
+10. Fix potential crash when using pixmap cache.
+11. Fix tab coloured mouse-over when not rounded.
+12. Implement size grip.
 
 0.58
 ----
