--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
 13. New mouse over effect - glow. Only applicable if etching or shadowing.
 14. New default button indicator - glow. Only applicable if etching
     or shadowing.
+15. Allow up to 5 custom defined gradients.
 
 0.58
 ----
