--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@
 14. New default button indicator - glow. Only applicable if etching
     or shadowing.
 15. Allow up to 5 custom defined gradients.
+16. Allow custom shades to be specified.
 
 0.58
 ----
