Add activeTabAppearance setting. Simplyfy gradient drawing.

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@
     or shadowing.
 15. Allow up to 5 custom defined gradients.
 16. Allow custom shades to be specified.
+17. Add option to specify active tab appearance.
 
 0.58
 ----
