Change default to not border menuitems.

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
 19. Apply 'border menuitems' only to popup menus.
 20. If lightening popup menus, and not bordering menuitems, then remove 1
     pix border arund popup menus.
+21. Change default to not border menuitems.
 
 0.58
 ----
