Scrollview options: allow sunken, highlight, and square. Fix coloured selected tabs. [KDE4]Fixed menu separator. [KDE]Use KIntNumInput for gradient stops. [KDE]Remove some frames from kate.

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,8 @@
     pix border arund popup menus.
 21. Change default to not border menuitems.
 22. Re-arrange config GUI.
+23. Remove some frames from kate.
+24. Scrolview options: allow sunken, highlight, and square.
 
 0.58
 ----
