--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+0.59.3
+------
+1. Fix background drawng of sliders on toolbars (such as in Kaffeine), when
+   colored mouse over is disabled and highlight factor is set to 1.0.
+
 0.59.2
 ------
 1. Also check in share/kde4/apps/kstyle/themes for qtc_*.themerc files.
