--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
+0.59.4
+------
+1. Dont darken dock widget titlebar.
+2. Left align dock widget titles - more KDE4 like. (Right align for RTL)
+
 0.59.3
 ------
-1. Fix background drawng of sliders on toolbars (such as in Kaffeine), when
+1. Fix background drawing of sliders on toolbars (such as in Kaffeine), when
    colored mouse over is disabled and highlight factor is set to 1.0.
 
 0.59.2
