--- a/ChangeLog
+++ b/ChangeLog
@@ -2,10 +2,11 @@
 ------
 1. Dont darken dock widget titlebar.
 2. Left align dock widget titles - more KDE4 like. (Right align for RTL)
+3. Dont activate menubar when Alt key is pressed alone - matches Gtk.
 
 0.59.3
 ------
-1. Fix background drawing of sliders on toolbars (such as in Kaffeine), when
+1. Fix background drawng of sliders on toolbars (such as in Kaffeine), when
    colored mouse over is disabled and highlight factor is set to 1.0.
 
 0.59.2
