--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.59.6
+------
+1. Add more afety checks for destruction of hover widgets.
+
 0.59.5
 ------
 1. In config dialog, rename the 'Fill' progressbar option to 'No border',
