--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 0.59.6
 ------
-1. Add more afety checks for destruction of hover widgets.
+1. Add more safety checks for destruction of hover widgets.
 
 0.59.5
 ------
