--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-0.59.6
-------
+0.60
+----
 1. Add more safety checks for destruction of hover widgets.
+2. New focus rect options - standard, highlight, background.
 
 0.59.5
 ------
