--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ----
 1. Add more safety checks for destruction of hover widgets.
 2. New focus rect options - standard, highlight, background.
+3. Add the ability to specify popup menu light factor.
 
 0.59.5
 ------
