Add useHighlightForMenu option - and fix colorMenubarMouseOver

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Add more safety checks for destruction of hover widgets.
 2. New focus rect options - standard, highlight, background.
 3. Add the ability to specify popup menu light factor.
+4. Add option to use darkened background colour for menuitem selection.
 
 0.59.5
 ------
