More slider styles.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 4. Add option to use darkened background colour for menuitem selection.
 5. Add 'fade' to menuitem appearance.
 6. Add new scrollbar type - oxygen.
+7. New slider styles - plain rotated, and round rotated.
 
 0.59.5
 ------
