--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,15 @@
 0.60
 ----
-1. Add more safety checks for destruction of hover widgets.
-2. New focus rect options - standard, highlight, background.
-3. Add the ability to specify popup menu light factor.
-4. Add option to use darkened background colour for menuitem selection.
-5. Add 'fade' to menuitem appearance.
-6. Option to have flat scrollbar buttons.
-7. New slider styles - plain rotated, and round rotated.
-8. Increase size of busy progressbar.
-9. Draw border around filled progress.
+ 1. Add more safety checks for destruction of hover widgets.
+ 2. New focus rect options - standard, highlight, background.
+ 3. Add the ability to specify popup menu light factor.
+ 4. Add option to use darkened background colour for menuitem selection.
+ 5. Add 'fade' to menuitem appearance.
+ 6. Option to have flat scrollbar buttons.
+ 7. New slider styles - plain rotated, and round rotated.
+ 8. Increase size of busy progressbar.
+ 9. Draw border around filled progress.
+10. Option to have raised checks/radios.
 
 0.59.5
 ------
