Rename crRaised to crButton -> as want to allow etched as well as raised.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,7 +9,7 @@
  7. New slider styles - plain rotated, and round rotated.
  8. Increase size of busy progressbar.
  9. Draw border around filled progress.
-10. Option to have raised checks/radios.
+10. Option to have button-like checks/radios.
 
 0.59.5
 ------
