--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
  9. Draw border around filled progress.
 10. Option to have button-like checks/radios.
 11. Use base for light part of lineedit border, and background for scrollview.
+12. Nicer 'V' arrows.
 
 0.59.5
 ------
