--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-0.60.1
-------
+0.61
+----
 1. Only draw coloured border for moused-over items if they are enabled!
+2. Add option to draw line after frameless groupbox title.
 
 0.60
 ----
