--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ----
 1. Only draw coloured border for moused-over items if they are enabled!
 2. Add option to draw line after frameless groupbox title.
+3. Dont darken background of dock widget titlebars, just draw a line underneath.
 
 0.60
 ----
