--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Only draw coloured border for moused-over items if they are enabled!
 2. Add option to draw line after frameless groupbox title.
 3. Dont darken background of dock widget titlebars, just draw a line underneath.
+4. Add 'none' to toolbar handle style.
 
 0.60
 ----
