Allow to darken popup menu background.

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
         Don't shade sliders
         Don't darken menubars
         Use darkened background for progressbars
+6. Allow to darken popup menu background.
 
 0.60
 ----
