--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Fix setting of default style. Fixes odd behaviour of config dialog!
 2. Fix position of dark part of sunken lines.
+3. Improve KDE dock widget titles.
 
 0.61
 ----
