--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.61.2
+------
+1. Fix setting of options if no qtcurvestylerc is found!
+
 0.61.1
 ------
 1. Fix setting of default style. Fixes odd behaviour of config dialog!
