--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+0.62.0
+------
+1. Reduce gradient code complexity - makes predefined gradients
+   work in the same vein as custom gradients.
+
 0.61.2
 ------
 1. Fix setting of options if no qtcurvestylerc is found!
