--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.61.3
+------
+1. Fix settings for sliderThumbs, handles, toolbarSeparators, and splitters.
+
 0.61.2
 ------
 1. Fix setting of options if no qtcurvestylerc is found!
