--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,8 @@
 
 0.61.3
 ------
-Fix settings for sliderThumbs, handles, toolbarSeparators, and splitters.
+1. Fix settings for sliderThumbs, handles, toolbarSeparators, and splitters.
+2. Disable 'group box line' for ksysguard.
 
 0.61.2
 ------
