--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 0.61.3
 ------
 1. Fix settings for sliderThumbs, handles, toolbarSeparators, and splitters.
+2. Disable 'group box line' for ksysguard.
 
 0.61.2
 ------
