--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@
         Sunken appearance set to soft
 5. Allow all bar flat and raised tabs to bol coloured.
 6. Only save appearance settings if different from default.
+7. If a gradient does not define the values for positions 0 and 100, then add these.
 
 0.61.3
 ------
