--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,10 @@
 6. Only save appearance settings if different from default.
 7. If a gradient does not define the values for positions 0 and 100, then add these.
 
+0.61.4
+------
+1. Fix gradient of faded menuitems when not using lighter background.
+
 0.61.3
 ------
 1. Fix settings for sliderThumbs, handles, toolbarSeparators, and splitters.
