Disable usage of group box lines - has too many issues.

--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,7 @@
 0.61.4
 ------
 1. Fix gradient of faded menuitems when not using lighter background.
+2. Disable usage of group box lines - has too many issues.
 
 0.61.3
 ------
