--- a/ChangeLog
+++ b/ChangeLog
@@ -25,7 +25,9 @@
  9. Added new focus option - line.
 10. Add new round options - extra and max.
 11. Don't etch disabled items.
-12. USe text colour for focus indicator in tree/list/etc views.
+12. Use text colour for focus indicator in tree/list/etc views.
+13. When specifying custom gradients, add the pssibility to have no
+    internal border - optins are now none, light, 3d
 
 0.61.4
 ------
