Add option to have central tabs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@
 12. Use text colour for focus indicator in tree/list/etc views.
 13. When specifying custom gradients, add the pssibility to have no
     internal border - optins are now none, light, 3d
+14. Add option to have central tabs.
 
 0.61.4
 ------
