Only apply plastik style mouse-over scrollbars and sliders when plastik is set as the mouse-over style.

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,7 +28,9 @@
 12. Use text colour for focus indicator in tree/list/etc views.
 13. When specifying custom gradients, add the pssibility to have no
     internal border - options are now none, light, 3d
-14. Add option to have central tabs.
+14. Only apply plastik style mouse-over scrollbars and sliders when
+    plastik is set as the mouse-over style.
+15. Add option to have central tabs.
 
 0.61.4
 ------
