Update defaults once more!

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
         Sunken scrollviews
         Sunken appearance set to soft
         Line focus
+        Set custom appearances for titlebars
  5. Allow all bar flat and raised tabs to bol coloured.
  6. Only save appearance settings if different from default.
  7. If a gradient does not define the values for positions 0 and 100, then add these.
