--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 0.62.1
 ------
 1. Use highlight colour for unselected focused view items.
-2. Fix striped progress.
+2. Fix saving/reading of custom shades.
+3. Fix striped progress.
 
 0.62.0
 ------
