--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Use highlight colour for unselected focused view items.
 2. Fix saving/reading of custom shades.
 3. Fix striped progress.
+4. Fix background of disabled spin widgets.
 
 0.62.0
 ------
