--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Fix crash when coloured mouse over is set to none, and focus is set to full.
 2. Make focus full like KDE4/Gtk2
+3. Fix some issues gradient issues (tabs and menuitems).
 
 0.62.1
 ------
