--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 0.62.3
 ------
 1. Fix misdrawing of filled slider groove when slider is at 0.
+2. Use correct appearance setting for slider groove.
 
 0.62.2
 ------
