--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Fix misdrawing of filled slider groove when slider is at 0.
 2. Use correct appearance setting for slider groove.
+3. Fix potentional palette issues if Qt3 and KDE3 have difference palettes.
 
 0.62.2
 ------
