--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 1. Fix misdrawing of filled slider groove when slider is at 0.
 2. Use correct appearance setting for slider groove.
 3. Fix potentional palette issues if Qt3 and KDE3 have difference palettes.
+4. Override QStyle::drawItem to remove etched disabled text, as opposed to
+   just setting GUIStyle styleHint. This fixes the 'click on menubaritem' to
+   close menu issue.
 
 0.62.2
 ------
