--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.62.4
+------
+1. When drawing filled slider groove, use fill colour for border as well.
+
 0.62.3
 ------
 1. Fix misdrawing of filled slider groove when slider is at 0.
