--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Use gradient for filled slider - unless appearance is flat/raised.
 2. Remove menubar item size adjust code when toolbar borders are set - not
    needed for KDE3, as it has paddnig anyway.
+3. Don't highlight slider groove on mouse-over.
 
 0.62.4
 ------
