Slightly alter listview header size

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 2. Remove menubar item size adjust code when toolbar borders are set - not
    needed for KDE3, as it has paddnig anyway.
 3. Don't highlight slider groove on mouse-over.
+4. Slightly alter listview header size.
 
 0.62.4
 ------
