--- a/ChangeLog
+++ b/ChangeLog
@@ -2,9 +2,10 @@
 ------
 1. Use gradient for filled slider - unless appearance is flat/raised.
 2. Remove menubar item size adjust code when toolbar borders are set - not
-   needed for KDE3, as it has paddnig anyway.
+   needed for KDE3, as it has padding anyway.
 3. Don't highlight slider groove on mouse-over.
 4. Slightly alter listview header size.
+5. Fix coloured bottom tabs.
 
 0.62.4
 ------
