--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+0.62.6
+------
+1. Allow ability to specify if titlebar center alignment is for the full window
+   width, or just the text area.
+   
 0.62.5
 ------
 1. Use gradient for filled slider - unless appearance is flat/raised.
