--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 2. Use a lighter shade for the dark portion of gradient border.
 3. Flat dot for radio buttons.
 4. Option to use button colour for listview headers.
+5. Use KDE4 colors for focus and mouse-over.
+6. Removal of background focus option.
 
 0.62.7
 ------
