--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 4. Option to use button colour for listview headers.
 5. Use KDE4 colors for focus and mouse-over.
 6. Removal of background focus option.
+7. Softer colouration of selected tab.
 
 0.62.7
 ------
