Improve appearance of progress when at very small step.

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 5. Use KDE4 colors for focus and mouse-over.
 6. Removal of background focus option.
 7. Softer colouration of selected tab.
+8. Improve appearance of progress when at very small steps.
 
 0.62.7
 ------
