--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,10 @@
 6. Removal of background focus option.
 7. Softer colouration of selected tab.
 8. Add option to draw tab's mouse over lines at the bottom.
+9. Modified defaults:
+    Tab mouse-over highlight drawn at the bottom
+    Plain slider style
+    Align titlebars text in center
 
 0.62.7
 ------
