--- a/ChangeLog
+++ b/ChangeLog
@@ -1,18 +1,20 @@
 0.63.0
 ------
-1. Add '3dfull' to gradient border options. This forces the
-   dark, as well as the light, portion to be drawn.
-2. Use a lighter shade for the dark portion of gradient border.
-3. Flat dot for radio buttons.
-4. Option to use button colour for listview headers.
-5. Use KDE4 colors for focus and mouse-over.
-6. Removal of background focus option.
-7. Softer colouration of selected tab.
-8. Add option to draw tab's mouse over lines at the bottom.
-9. Modified defaults:
-    Tab mouse-over highlight drawn at the bottom
-    Plain slider style
-    Align titlebars text in center
+ 1. Add '3dfull' to gradient border options. This forces the
+    dark, as well as the light, portion to be drawn.
+ 2. Use a lighter shade for the dark portion of gradient border.
+ 3. Flat dot for radio buttons.
+ 4. Option to use button colour for listview headers.
+ 5. Use KDE4 colors for focus and mouse-over.
+ 6. Removal of background focus option.
+ 7. Softer colouration of selected tab.
+ 8. Add option to draw tab's mouse over lines at the bottom.
+ 9. Modified defaults:
+     Tab mouse-over highlight drawn at the bottom
+     Plain slider style
+     Align titlebars text in center
+10. Remove 'Custom sunken gradient' setting, as this was not
+    actually used.
 
 0.62.7
 ------
