--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
     window size is small.
 12. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
+13. Fix faded menuitems when not rounding.
 
 0.62.7
 ------
