--- a/ChangeLog
+++ b/ChangeLog
@@ -13,13 +13,14 @@
      Tab mouse-over highlight drawn at the bottom
      Plain slider style
      Align titlebars text in center
-10. Remove 'Custom sunken gradient' setting, as this was not
+10. Add appearance setting for background of flat scrollbar buttons.
+11. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
-11. Better handling of 'full centered' titlebar texts when
+12. Better handling of 'full centered' titlebar texts when
     window size is small.
-12. Fix scrolbar sliders appearing rounded when round=none, sliders
+13. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
-13. Fix faded menuitems when not rounding.
+14. Fix faded menuitems when not rounding.
 
 0.62.7
 ------
