--- a/ChangeLog
+++ b/ChangeLog
@@ -14,13 +14,15 @@
      Plain slider style
      Align titlebars text in center
 10. Add appearance setting for background of flat scrollbar buttons.
-11. Remove 'Custom sunken gradient' setting, as this was not
+11. Add HCY colour space.
+12. Update gradient preview when change colour space.
+13. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
-12. Better handling of 'full centered' titlebar texts when
+14. Better handling of 'full centered' titlebar texts when
     window size is small.
-13. Fix scrolbar sliders appearing rounded when round=none, sliders
+15. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
-14. Fix faded menuitems when not rounding.
+16. Fix faded menuitems when not rounding.
 
 0.62.7
 ------
