--- a/ChangeLog
+++ b/ChangeLog
@@ -15,14 +15,17 @@
      Align titlebars text in center
 10. Add appearance setting for background of flat scrollbar buttons.
 11. Add HCY colour space.
-12. Update gradient preview when change colour space.
-13. Remove 'Custom sunken gradient' setting, as this was not
+12. Use tint and mix color routines from KDE4's KColorUtils.
+13. Remove QtCurve's 'inactiveHighlight' option, and use KDE4s setting
+    instead.
+14. Update gradient preview when change colour space.
+15. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
-14. Better handling of 'full centered' titlebar texts when
+16. Better handling of 'full centered' titlebar texts when
     window size is small.
-15. Fix scrolbar sliders appearing rounded when round=none, sliders
+17. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
-16. Fix faded menuitems when not rounding.
+18. Fix faded menuitems when not rounding.
 
 0.62.7
 ------
