--- a/ChangeLog
+++ b/ChangeLog
@@ -21,14 +21,15 @@
 14. Add option to specify appearance setting of filler part of sliders.
 15. Increase number of custom gradients - now matches number of gradient
     config items.
-16. Update gradient preview when change colour space.
-17. Remove 'Custom sunken gradient' setting, as this was not
+16. When using glow style mouse over, use mouse over colour for arrows.
+17. Update gradient preview when change colour space.
+18. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
-18. Better handling of 'full centered' titlebar texts when
+19. Better handling of 'full centered' titlebar texts when
     window size is small.
-19. Fix scrolbar sliders appearing rounded when round=none, sliders
+20. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
-20. Fix faded menuitems when not rounding.
+21. Fix faded menuitems when not rounding.
 
 0.62.7
 ------
