--- a/ChangeLog
+++ b/ChangeLog
@@ -22,14 +22,15 @@
 15. Increase number of custom gradients - now matches number of gradient
     config items.
 16. When using glow style mouse over, use mouse over colour for arrows.
-17. Update gradient preview when change colour space.
-18. Remove 'Custom sunken gradient' setting, as this was not
+17. Option to use a thinner groove for scrollbars (only when using flat, or no, buttons).
+18. Update gradient preview when change colour space.
+19. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
-19. Better handling of 'full centered' titlebar texts when
+20. Better handling of 'full centered' titlebar texts when
     window size is small.
-20. Fix scrolbar sliders appearing rounded when round=none, sliders
+21. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
-21. Fix faded menuitems when not rounding.
+22. Fix faded menuitems when not rounding.
 
 0.62.7
 ------
