--- a/ChangeLog
+++ b/ChangeLog
@@ -23,15 +23,16 @@
     config items.
 16. When using glow style mouse over, use mouse over colour for arrows.
 17. Option to use a thinner groove for scrollbars (only when using flat, or no, buttons).
-18. Update gradient preview when change colour space.
-19. Remove 'Custom sunken gradient' setting, as this was not
+18. Option to only color sliders on mouse over.
+19. Update gradient preview when change colour space.
+20. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
-20. Better handling of 'full centered' titlebar texts when
+21. Better handling of 'full centered' titlebar texts when
     window size is small.
-21. Fix scrolbar sliders appearing rounded when round=none, sliders
+22. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
-22. Fix faded menuitems when not rounding.
-23. Make popup menu titles more KDE4-like.
+23. Fix faded menuitems when not rounding.
+24. Make popup menu titles more KDE4-like.
 
 0.62.7
 ------
