--- a/ChangeLog
+++ b/ChangeLog
@@ -24,15 +24,16 @@
 16. When using glow style mouse over, use mouse over colour for arrows.
 17. Option to use a thinner groove for scrollbars (only when using flat, or no, buttons).
 18. Option to only color sliders on mouse over.
-19. Update gradient preview when change colour space.
-20. Remove 'Custom sunken gradient' setting, as this was not
+19. Option to round all tabs.
+20. Update gradient preview when change colour space.
+21. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
-21. Better handling of 'full centered' titlebar texts when
+22. Better handling of 'full centered' titlebar texts when
     window size is small.
-22. Fix scrolbar sliders appearing rounded when round=none, sliders
+23. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
-23. Fix faded menuitems when not rounding.
-24. Make popup menu titles more KDE4-like.
+24. Fix faded menuitems when not rounding.
+25. Make popup menu titles more KDE4-like.
 
 0.62.7
 ------
