--- a/ChangeLog
+++ b/ChangeLog
@@ -25,15 +25,16 @@
 17. Option to use a thinner groove for scrollbars (only when using flat, or no, buttons).
 18. Option to only color sliders on mouse over.
 19. Option to round all tabs.
-20. Update gradient preview when change colour space.
-21. Remove 'Custom sunken gradient' setting, as this was not
+20. Add option to specify menu stripe color.
+21. Update gradient preview when change colour space.
+22. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
-22. Better handling of 'full centered' titlebar texts when
+23. Better handling of 'full centered' titlebar texts when
     window size is small.
-23. Fix scrolbar sliders appearing rounded when round=none, sliders
+24. Fix scrolbar sliders appearing rounded when round=none, sliders
     are shaded, and flat scrollbar buttons.
-24. Fix faded menuitems when not rounding.
-25. Make popup menu titles more KDE4-like.
+25. Fix faded menuitems when not rounding.
+26. Make popup menu titles more KDE4-like.
 
 0.62.7
 ------
