--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.64.0
+------
+1. Add option to not draw border around popupmenus.
+
 0.63.0
 ------
  1. Add '3dfull' to gradient border options. This forces the
