Fix mispainted spin widget entry field.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Add option to not draw border around popupmenus.
 2. Add option to unify spinbuttons.
+3. Fix mispainted spin widget entry field.
 
 0.63.0
 ------
