--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 5. Fix mispainted spin widget entry field.
 6. Fix reading of KDE4 palette.
 7. Fix setting of check/radio shade.
+8. Fix storing of custom menu stripe colour.
 
 0.63.0
 ------
