--- a/ChangeLog
+++ b/ChangeLog
@@ -1,15 +1,16 @@
 0.64.0
 ------
-1. Add option to not draw border around popupmenus.
-2. Add option to unify spinbuttons.
-3. Add option to set sub-menu delay (default 100ms)
-4. Use equal top/bottom padding on popupmenu separators.
-5. Fix mispainted spin widget entry field.
-6. Fix reading of KDE4 palette.
-7. Fix setting of check/radio shade.
-8. Fix storing of custom menu stripe colour.
-9. In config dialog, place '%'symbol on the right for the "popup menu background"
-   setting.
+ 1. Add option to not draw border around popupmenus.
+ 2. Add option to unify spinbuttons.
+ 3. Add option to set sub-menu delay (default 100ms)
+ 4. Use equal top/bottom padding on popupmenu separators.
+ 5. Fix mispainted spin widget entry field.
+ 6. Fix reading of KDE4 palette.
+ 7. Fix setting of check/radio shade.
+ 8. Fix storing of custom menu stripe colour.
+ 9. In config dialog, place '%'symbol on the right for the "popup menu background"
+    setting.
+10. Fix kaffeine's slider benig completely filled at start of song.
 
 0.63.0
 ------
