--- a/ChangeLog
+++ b/ChangeLog
@@ -4,16 +4,17 @@
  2. Add option to unify spinbuttons.
  3. Add option to set sub-menu delay (default 100ms)
  4. Use equal top/bottom padding on popupmenu separators.
- 5. Draw resize grip as a darkend triangle.
- 6. Fix mispainted spin widget entry field.
- 7. Fix reading of KDE4 palette.
- 8. Fix setting of check/radio shade.
- 9. Fix storing of custom menu stripe colour.
-10. In config dialog, place '%'symbol on the right for the "popup menu background"
+ 5. Add option to colour arrow part of combobox.
+ 6. Draw resize grip as a darkend triangle.
+ 7. Fix mispainted spin widget entry field.
+ 8. Fix reading of KDE4 palette.
+ 9. Fix setting of check/radio shade.
+10. Fix storing of custom menu stripe colour.
+11. In config dialog, place '%'symbol on the right for the "popup menu background"
     setting.
-11. Fix kaffeine's slider benig completely filled at start of song.
-12. Fix LineEdit in qtconfig.
-13. Under KDE4 (KDE_SESSION_VERSION>=4), default hover/focus colours to the
+12. Fix kaffeine's slider benig completely filled at start of song.
+13. Fix LineEdit in qtconfig.
+14. Under KDE4 (KDE_SESSION_VERSION>=4), default hover/focus colours to the
     KDE4 defaults.
 
 0.63.0
