--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.64.2
+------
+1. When using shaded combo buttons, use button colours for border.
+
 0.64.1
 ------
 1. When using shaded combo buttons, use the combo splitter setting to
