Default to reading KDE4 settings if KDE_SESSION_VERSION is not set. Pass -DQTC_DEFAULT_TO_KDE3=true to cmake to force this to default to KDE3.

--- a/README
+++ b/README
@@ -8,6 +8,11 @@ To build and install:
 4. make
 5. make install
 
+The following options may be supplied to cmake:
+
+    -DQTC_DEFAULT_TO_KDE3=true
+       If the KDE_SESSION_VERSION is not set, then assume we are running
+       under KDE3. If this cmake option is not set, then KDE4 is assumed.
 
 Themes
 ------
