--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Fix some re-draw errors with thin scrollbar grooves.
 2. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
    Pass -DQTC_DEFAULT_TO_KDE3=true to cmake to force this to default to KDE3.
+3. Call kde-config / kde4-config to ascertain users KDEHOME.
 
 0.64.2
 ------
