--- a/ChangeLog
+++ b/ChangeLog
@@ -5,10 +5,12 @@
 2. Enable mouse-over for entry fields.
 3. For mouse-over and focus, use same colour for top and bottom inner parts
    of entry fields.
-4. Fix some re-draw errors with thin scrollbar grooves.
-5. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
+4. When using full focus with colored mouse over, then mouse over takes
+   precedence.
+5. Fix some re-draw errors with thin scrollbar grooves.
+6. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
    Pass -DQTC_DEFAULT_TO_KDE3=true to cmake to force this to default to KDE3.
-6. Call kde-config / kde4-config to ascertain users KDEHOME.
+7. Call kde-config / kde4-config to ascertain users KDEHOME.
 
 0.64.2
 ------
