--- a/ChangeLog
+++ b/ChangeLog
@@ -1,18 +1,20 @@
 0.65.0
 ------
-1. Add options to draw editable combos, and spin widgets, as edit fields with
-   embedded arrows - oxygen style. (Enabled by default)
-2. Add option to draw a light border around tab widgets, as opposed to 3d look.
-   (Enabled by default)
-3. Enable mouse-over for entry fields.
-4. For mouse-over and focus, use same colour for top and bottom inner parts
-   of entry fields.
-5. When using full focus with colored mouse over, then mouse over takes
-   precedence.
-6. Fix some re-draw errors with thin scrollbar grooves.
-7. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
-   Pass -DQTC_DEFAULT_TO_KDE3=true to cmake to force this to default to KDE3.
-8. Call kde-config / kde4-config to ascertain users KDEHOME.
+ 1. Add options to draw editable combos, and spin widgets, as edit fields with
+    embedded arrows - oxygen style. (Enabled by default)
+ 2. Add option to draw a light border around tab widgets, as opposed to 3d look.
+    (Enabled by default)
+ 3. Added ability to specify scrollbar width (11 -> 31, default 15)
+ 4. Base slider dimensions off of scrollbar width, unless using triangular slider.
+ 5. Enable mouse-over for entry fields.
+ 6. For mouse-over and focus, use same colour for top and bottom inner parts
+    of entry fields.
+ 7. When using full focus with colored mouse over, then mouse over takes
+    precedence.
+ 8. Fix some re-draw errors with thin scrollbar grooves.
+ 9. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
+    Pass -DQTC_DEFAULT_TO_KDE3=true to cmake to force this to default to KDE3.
+10. Call kde-config / kde4-config to ascertain users KDEHOME.
 
 0.64.2
 ------
