--- a/ChangeLog
+++ b/ChangeLog
@@ -11,10 +11,11 @@
     of entry fields.
  7. When using full focus with colored mouse over, then mouse over takes
     precedence.
- 8. Fix some re-draw errors with thin scrollbar grooves.
- 9. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
+ 8. Alter default settings; Use soft gradient for active tab.
+ 9. Fix some re-draw errors with thin scrollbar grooves.
+10. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
     Pass -DQTC_DEFAULT_TO_KDE3=true to cmake to force this to default to KDE3.
-10. Call kde-config / kde4-config to ascertain users KDEHOME.
+11. Call kde-config / kde4-config to ascertain users KDEHOME.
 
 0.64.2
 ------
