--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
 12. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
     Pass -DQTC_DEFAULT_TO_KDE3=true to cmake to force this to default to KDE3.
 13. Call kde-config / kde4-config to ascertain users KDEHOME.
+14. Fix slight redraw error with glow style mouse over tabs.
 
 0.64.2
 ------
