--- a/ChangeLog
+++ b/ChangeLog
@@ -6,25 +6,26 @@
  3. Added ability to specify scrollbar width (11 -> 31, default 15)
  4. Base slider dimensions off of scrollbar width, unless using triangular slider.
  5. Add option to have thinner buttons.
- 6. Enable mouse-over for entry fields.
- 7. For mouse-over and focus, use same colour for top and bottom inner parts
+ 6. Add option to specify gradient for background of popupmenus.
+ 7. Enable mouse-over for entry fields.
+ 8. For mouse-over and focus, use same colour for top and bottom inner parts
     of entry fields.
- 8. When using full focus with colored mouse over, then mouse over takes
+ 9. When using full focus with colored mouse over, then mouse over takes
     precedence.
- 9. Alter default settings:
+10. Alter default settings:
         Place arrows of spin buttons, and editable combos, in the edit field.
         Draw a light border around tab widget.
         Thinner buttons.
         Use soft gradient for active tab.
         Use glow style highlight for tab mouse-over (this introduces gaps between tabs).
-10. Modified how button, and combo, heights are calculated - no longer set a
+11. Modified how button, and combo, heights are calculated - no longer set a
     minimum height.
-11. Fix some re-draw errors with thin scrollbar grooves.
-12. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
+12. Fix some re-draw errors with thin scrollbar grooves.
+13. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set.
     Pass -DQTC_DEFAULT_TO_KDE3=true to cmake to force this to default to KDE3.
-13. Call kde-config / kde4-config to ascertain users KDEHOME.
-14. Fix slight redraw error with glow style mouse over tabs.
-15. Remove box from listview arrows when configured to drawn listview lines.
+14. Call kde-config / kde4-config to ascertain users KDEHOME.
+15. Fix slight redraw error with glow style mouse over tabs.
+16. Remove box from listview arrows when configured to drawn listview lines.
 
 0.64.2
 ------
