--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Use a border width of 1 if gradienting popupmenus.
 2. Fix gradient menus when not using lighter popup menu backgrounds.
+3. Dont fill background of PE_PanelLineEdit
 
 0.65.0
 ------
