--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Use a border width of 1 if gradienting popupmenus.
 2. Fix gradient menus when not using lighter popup menu backgrounds.
 3. Dont fill background of PE_PanelLineEdit
+4. When readining kicker's settings, and window colours, use the correct KDE home.
 
 0.65.0
 ------
