--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 0.65.1
 ------
 1. Use a border width of 1 if gradienting popupmenus.
+2. When using darkened menu stripe use popupmenu background colour as the
+   base colour.
 2. Fix gradient menus when not using lighter popup menu backgrounds.
 3. Dont fill background of PE_PanelLineEdit
 4. When readining kicker's settings, and window colours, use the correct KDE home.
